removed create label from autosuggest, change yellow ai landing page text, render markdown and links and chatbot responses, spacing fixes in chatbot

--- a/frontend/src/components/chatbotStyles.css
+++ b/frontend/src/components/chatbotStyles.css
@@ -103,6 +103,10 @@ body {
   color: black;
  }
 
+ .react-select-3-placeholder{
+  text-align: 'left';
+ }
+
 
   
  
